// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog simple Dialog renders 1`] = `
<DocumentFragment>
  <div
    class="mdc-dialog mdc-dialog--opening"
  >
    <div
      class="mdc-dialog__container"
    >
      <div
        aria-modal="true"
        class="mdc-dialog__surface"
        role="alertdialog"
      >
        <h2
          class="mdc-dialog__title"
        >
          This is a simple dialogFoo
        </h2>
        <div
          class="mdc-dialog__content"
        >
          You can pass the body prop, or anything you want as children.
        </div>
        <div
          class="mdc-dialog__actions"
        >
          <button
            class="mdc-dialog__button mdc-button"
            data-mdc-dialog-action="close"
          >
            <div
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              Cancel
            </span>
          </button>
          <button
            class="mdc-dialog__button mdc-button"
            data-mdc-dialog-action="accept"
            data-mdc-dialog-button-default="true"
          >
            <div
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              Accept
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="mdc-dialog__scrim"
    />
  </div>
</DocumentFragment>
`;

exports[`Dialog simple Dialog renders with children 1`] = `
<DocumentFragment>
  <div
    class="mdc-dialog mdc-dialog--opening"
  >
    <div
      class="mdc-dialog__container"
    >
      <div
        aria-modal="true"
        class="mdc-dialog__surface"
        role="alertdialog"
      >
        <h2
          class="mdc-dialog__title"
        >
          This is a simple dialog
        </h2>
        <div
          class="mdc-dialog__content"
        >
          Hello
        </div>
        <div
          class="mdc-dialog__actions"
        >
          <button
            class="mdc-dialog__button mdc-button"
            data-mdc-dialog-action="close"
          >
            <div
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              Cancel
            </span>
          </button>
          <button
            class="mdc-dialog__button mdc-button"
            data-mdc-dialog-action="accept"
            data-mdc-dialog-button-default="true"
          >
            <div
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              Accept
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="mdc-dialog__scrim"
    />
  </div>
</DocumentFragment>
`;

exports[`Dialog simple Dialog renders with no children 1`] = `
<DocumentFragment>
  <div
    class="mdc-dialog mdc-dialog--opening"
  >
    <div
      class="mdc-dialog__container"
    >
      <div
        aria-modal="true"
        class="mdc-dialog__surface"
        role="alertdialog"
      >
        <h2
          class="mdc-dialog__title"
        >
          This is a simple dialog
        </h2>
        <div
          class="mdc-dialog__actions"
        >
          <button
            class="mdc-dialog__button mdc-button"
            data-mdc-dialog-action="close"
          >
            <div
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              Cancel
            </span>
          </button>
          <button
            class="mdc-dialog__button mdc-button"
            data-mdc-dialog-action="accept"
            data-mdc-dialog-button-default="true"
          >
            <div
              class="mdc-button__ripple"
            />
            <span
              class="mdc-button__label"
            >
              Accept
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="mdc-dialog__scrim"
    />
  </div>
</DocumentFragment>
`;
